Avancé du NPC : Modification et optimisation
Gros problème de non link entre le renderer et le npc